activity tab paused

--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -163,14 +163,15 @@
               <i class="fas fa-list"></i>
               <span>All Bookings</span>
             </button>
-            <button 
+            <!-- Activity History Tab - Hidden (not currently in use) -->
+            <!-- <button 
               class="tab"
               [class.active]="activeTab() === 'history'"
               (click)="setActiveTab('history')"
             >
               <i class="fas fa-history"></i>
               <span>Activity History</span>
-            </button>
+            </button> -->
             <button 
               class="tab"
               [class.active]="activeTab() === 'listings'"
